--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -16,14 +16,20 @@
 
 .main_log
 {
-    height:300px;
     margin-bottom:auto;
     margin-right:auto;
     margin-left:auto;
 }
-.image_log
+.section_tap
 {
-    display:inline;
+    position:fixed;
+    top:300px;
+  
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+   
 }
 
 .middle_icon
@@ -32,8 +38,7 @@
     height:25px;
     margin-bottom:auto;
     margin-right:auto;
-    opacity:1;
-    
+    opacity:1;   
 }
 .scan_icon
 {
@@ -76,14 +81,14 @@
 .text_location
 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bolder;
+    /*font-weight: bolder;*/
 }
 .text_main
 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 14px;
-     margin-bottom:0px;
-     margin-top:0px;
+    margin-bottom:0px;
+    margin-top:0px;
 }
 .little_title
 {
