--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,10 +1,16 @@
+.tr
+{
+  height: 40px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
 .login_avatar
 {
-  width:80px;
-  height:80px; 
+  width:60px;
+  height:60px; 
   opacity:1;
   border-radius: 50%;
-  margin-top: 20px; 
+  margin-top: 5px; 
 }
 .image_icon
 {
@@ -29,16 +35,20 @@
 
 .icon_td
 {
-   width:60px;
+   width:80px;
+   text-align: right;
 }
 .text_td
 {
-    width:120px;
+    width:240px;
     text-align: left;
+    margin-left:10px;
+    margin-bottom: 10px;
 }
 .next_td
 {
-    width:300px;
+    width:60px;
+   
     text-align: right;
-    margin-right: 30px;
+    margin-right: 20px;
 }
