--- a/pages/person_info/person_info.wxss
+++ b/pages/person_info/person_info.wxss
@@ -1,3 +1,9 @@
+page {  
+  display: block;  
+  min-height: 100%;  
+  background-color:rgb(249, 249, 249);
+}  
+
 .login_avatar
 {
   width:50px;
@@ -6,76 +12,19 @@
   border-radius: 50%;
   margin-top: 5px; 
 }
-.user_img
-{
-    height:120px;
-    width:120px;
-    border-radius:50%;
+
+.tr_label
+{ 
+    background-color: #ffffff;
 }
 
-.weight_img
+.tr
 {
-    height:50px;
-    width:50px;
+  height:50px;
+  background-color: #ffffff;
 }
 
-.exponent_img
-{
-    height:90px;
-    width:90px;
-}
-.health_img
-{
-    height:300px;
-    width: 120px;
-}
-
-.rule_img
-{
-    height:300px;
-    width: 100px;
-}
-.tr_content
-{
-    height:30px;
-    text-align: center;
-}
-.v_explain_bmi
-{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 12px;
-}
-
-.bmi_standard
-{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     font-size: 14px;
-    height: 30px;
-    text-align: center;
-}
-.thin
-{
-    background-color: #A1FBFC;
-    line-height: 30px;
-}
-.health
-{
-    background-color: #90FE83;
-    line-height: 30px;
-}
-.slightly_fat
-{
-    background-color: #FDF89C;
-    line-height: 30px;
-}
-.fat
-{
-    background-color: #FCA764;
-    line-height:30px;
-}
-
-.health_data
-{
-    color: #11E1EE;
-    font-size: 20px;
+.button-hover
+{ 
+  background-color: red; 
 }
