--- a/pages/wallet/wallet.wxss
+++ b/pages/wallet/wallet.wxss
@@ -1,17 +1,20 @@
-.v_wallat_log
+page {  
+  display: block;  
+  min-height: 100%;  
+  background-color:rgb(201, 201, 201);
+}  
+.transcation_tr
 {
-    height: 100px;
+  background-color: rgb(255, 215, 3);
 }
-.img_wallat_log
+.fish_food_td
 {
-    width:60px;
-    height:60px;
-    margin-top:25px;
-    margin-right:auto;
-    opacity:1;
-    margin-left:auto;
+  margin-left:20px;
 }
-.power_td
+
+.pickrt_tr
 {
-     margin-top:10px;
+    margin-top: 70px;
+    background-color: #ffffff;
+    height: 60px;
 }
