--- a/client/pages/me/me.wxml
+++ b/client/pages/me/me.wxml
@@ -93,7 +93,7 @@
                     <text>关于我们</text>
                 </view>
                 <view class="td next_td" >
-                    <view bindtap="hotline">
+                    <view bindtap="about_us">
                         <image class="image_icon_next" src="../../images/next_page.png"></image>
                     </view>
                 </view>
