--- a/client/pages/main/main.wxss
+++ b/client/pages/main/main.wxss
@@ -40,12 +40,15 @@
     margin-right:auto;
     opacity:1;   
 }
-.scan_icon
+/*.scan_tap
 {
-   width:40%;
-   text-align:right;
-   padding-right:20px; 
-}
+   position:fixed;
+    top:400px;
+   width: 100%;
+
+   display: flex;
+    justify-content: center;
+}*/
 .scan_text
 {
     text-align:left;
