--- a/client/pages/trans_record/trans_record.wxss
+++ b/client/pages/trans_record/trans_record.wxss
@@ -2,4 +2,32 @@ page {
   display: block;  
   min-height: 100%;  
   background-color:#ffffff;
-}  
+} 
+
+.first{ font-size: 18px;}
+.second{
+    font-size: 16px;
+    color:rgb(220,220,220);
+    border-bottom-width:2rpx;
+    border-bottom-style:solid;
+    border-bottom-color:#F3F3F3;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+
+}
+.trans_tp,.trans_time{
+    padding-left:5px; 
+    margin-left: 5px;
+    margin-bottom: 3px;
+    text-align: left;
+    width:50%;
+}
+.trans_power,.remain_power{
+    padding-right:5px; 
+    margin-right: 5px;
+    text-align: right;
+    width:50%;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+    
